--- a/app/assets/stylesheets/parts.css.scss
+++ b/app/assets/stylesheets/parts.css.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the Parts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.parts td {
+  font-weight: bold;
+  color: black;
+  border-top: 1px solid black;
+}
