--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -1,2 +1,47 @@
-<h1>Parts#index</h1>
-<p>Find me in app/views/parts/index.html.erb</p>
+<div class="parts">
+  <h1>Smartmaker Kits</h1>
+
+  <table class="table table-hover table-compact">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Status</th>
+        <th>Parts</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% for kit in @kits %>
+        <tr style="background-color: <%= kit.color %>">
+          <td><%= kit.name %></td>
+          <td><%= kit.human_status %></td>
+          <td>
+            <% kit.db_parts.each do |part| %>
+              <span style="background-color: <%= part.color %>"><%= part.name %></span>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  
+  <h1>Smartmaker Parts</h1>
+
+  <table class="table table-hover table-compact">
+    <thead>
+      <tr>
+        <th>SKU</th>
+        <th>Name</th>
+        <th>Status</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% for part in @parts %>
+        <tr style="background-color: <%= part.color %>">
+          <td><%= part.sku %></td>
+          <td><%= part.name %></td>
+          <td><%= part.human_status %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
