Precompile assets on deploy + Improvements to styling

--- a/app/assets/stylesheets/parts.css.scss
+++ b/app/assets/stylesheets/parts.css.scss
@@ -6,4 +6,9 @@
   font-weight: bold;
   color: black;
   border-top: 1px solid black;
+  line-height: 2;
+}
+
+.parts span {
+  padding: 2px 4px;
 }
