--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -4,16 +4,16 @@
   <table class="table table-hover table-compact">
     <thead>
       <tr>
-        <th>Name</th>
-        <th>Status</th>
+        <th style="width: 15%">Name</th>
+        <th style="width: 15%">Status</th>
         <th>Parts</th>
       </tr>
     </thead>
     <tbody>
       <% for kit in @kits %>
-        <tr style="background-color: <%= kit.color %>">
-          <td><%= kit.name %></td>
-          <td><%= kit.human_status %></td>
+        <tr>
+          <td><%= kit.name.sub("–", "<br />").html_safe %></td>
+          <td style="background-color: <%= kit.color %>"><%= kit.human_status %></td>
           <td>
             <% kit.db_parts.each do |part| %>
               <span style="background-color: <%= part.color %>"><%= part.name %></span>
