--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -1,4 +1,4 @@
-<div class="parts">
+<div>
   <h1>Smartmaker Kits</h1>
 
   <h3> Legend </h3>
@@ -8,7 +8,7 @@
     <% end %>
   </ul>
 
-  <table class="table table-hover table-compact">
+  <table class="kits table table-hover table-compact">
     <thead>
       <tr>
         <th style="width: 15%">Name</th>
@@ -33,7 +33,7 @@
   
   <h1>Smartmaker Parts</h1>
 
-  <table class="table table-hover table-compact">
+  <table class="parts table table-hover table-compact">
     <thead>
       <tr>
         <th>SKU</th>
